# AllVis

./: .gitignore  CMakeLists.txt  project.conf
configuration/: CMakeLists.txt  CTestTestfile.cmake  Makefile  environment.h.in  patenvironmenth.h  version.h  version.h.in
core/: CMakeLists.txt  default.ini  default.settings
core/include/: config.h  constants.h  core.h  quaternion.h  tools.h  transform.h  vector.h
core/include/geometry/: general.h  geometry2d.h  geometry3d.h
core/include/math/: base.h  linear.h  random.h
core/src/: base.cpp  configurable.h  file.cpp  file.h  file.hpp  geometry.cpp  geometry.h  geometry2d.cpp  geometry3d.cpp  global.hpp  imgui.ini  matrix.cpp  matrix.h  quaternion.cpp  quaternion.h  tools.cpp  tools.h  transform.cpp  transform.h  vector.cpp  vector.h
core/tests/: CMakeLists.txt  case_matrix.h  cases_vector.h  test_arithmetics.cpp  test_geomtry.cpp  test_math.cpp  test_matrix.cpp  test_quaternion.cpp  test_tools.cpp  test_transform.cpp  test_utils.cpp  test_utils.h  test_vector.cpp
examples/: CMakeLists.txt
examples/ex01/: CMakeLists.txt  ex01.cpp
gui/: CMakeLists.txt
gui/include/: gui.h
gui/src/: ImGuiFileDialog.h  appliation.cpp  application.h  camera.cpp  camera.h  config.h  default.ini  default.layout  events.h  fbo.cpp  fbo.h  gl_object.h  imgui.ini  imgui_widget.cpp  imgui_widget.h  imgui_window.cpp  imgui_window.h  light.cpp  light.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  models.cpp  models.h  sampler.h  scene.cpp  scene.h  scene_widget.cpp  scene_widget.h  shader.cpp  shader.h  text_render.cpp  text_render.h  texture.cpp  texture.h  transform.cpp  transform.h  ui_log.h
gui/src/shaders/: basic.frag  basic.vert  basic_2d.frag  basic_2d.vert  basic_tex.frag  basic_tex.vert  blinn-phong.frag  blinn-phong.vert  blinn-phong_no_tspace.frag  blinn-phong_no_tspace.vert  deferred_shading.frag  depth.frag  depth.vert  depth_cube.frag  depth_cube.geom  depth_cube.vert  direction_light.frag  direction_light.geom  direction_light.vert  env_brdf.frag  env_brdf.vert  env_irradiance.frag  env_irradiance.vert  env_prefilter.frag  env_prefilter.vert  equi_to_cube.frag  equi_to_cube.vert  equirectangular_cube.frag  equirectangular_cube.vert  g_buffer.frag  g_buffer.vert  gaussian_blur.vert  gaussian_blur_h.frag  gaussian_blur_v.frag  gaussian_blur_x.frag  gaussian_blur_y.frag  hdr.frag  hdr.vert  instanced_light.frag  instanced_light.vert  (+25 more)
gui/tests/: CMakeLists.txt  test_camera.cpp  test_mesh.cpp
math/: CMakeLists.txt
math/include/: lmath.h
math/src/: arithmetics.h  linear.h
math/tests/: CTestTestfile.cmake
physics/: CMakeLists.txt
vis/: CMakeLists.txt
